# CNNcpp

./: CMakeLists.txt  README.md
include/cnn/: CNN.h  MNISTReader.h
include/interfaces/: ActivationFunction.h  AdaptiveLayer.h  Layer.h  ParameterizedLayer.h
include/layers/: ConvolutionalLayer.h  FlattenLayer.h  FullyConnectedLayer.h  SoftmaxLayer.h
include/utils/: ImageData.h  MatrixUtils.h
include/utils/activationFunctions/: ELU.h  ReLU.h
shaders/: convolution.glsl  convolution.metal
src/: main.cpp
src/cnn/: CNN.cpp  MNISTReader.cpp
src/layers/: ConvolutionalLayer.cpp  FlattenLayer.cpp  FullyConnectedLayer.cpp  SoftmaxLayer.cpp
src/utils/: ImageData.cpp  MatrixUtils.cpp
src/utils/activationFunctions/: ELU.cpp  ReLU.cpp
